--- a/charts/weather-cronjob/templates/configmap.yaml
+++ b/charts/weather-cronjob/templates/configmap.yaml
@@ -5,7 +5,7 @@ data:
     path = {{ .Values.output.path }}
 
     [LOCATION]
-    forecase_office_id={{ .Values.location.office }}
+    forecast_office_id={{ .Values.location.office }}
     x_coordinate={{ .Values.location.longitude }}
     y_coordinate={{ .Values.location.latitude }}
 kind: ConfigMap
