feat: remove office id and rename variables to latitude and longitude

--- a/charts/weather-cronjob/templates/configmap.yaml
+++ b/charts/weather-cronjob/templates/configmap.yaml
@@ -5,9 +5,8 @@ data:
     path = {{ .Values.output.path }}
 
     [LOCATION]
-    forecast_office_id={{ .Values.location.office }}
-    x_coordinate={{ .Values.location.longitude }}
-    y_coordinate={{ .Values.location.latitude }}
+    latitude={{ .Values.location.latitude }}
+    longitude={{ .Values.location.longitude }}
 kind: ConfigMap
 metadata:
   name: config
