misc: update Chart description and cron job name

--- a/charts/weather-cronjob/Chart.yaml
+++ b/charts/weather-cronjob/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: angi-weather-cj
-description: Chart for deploying cilium
+description: Chart for deploying Angi's hourly weather forecast.
 type: application
-version: 0.1.0
+version: 0.1.1
 appVersion: "0.0.1"
