--- a/charts/weather-cronjob/templates/cronjob.yaml
+++ b/charts/weather-cronjob/templates/cronjob.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: myjob
+  name: weather-forecast
 spec:
   schedule: {{ .Values.schedule }}
   jobTemplate:
