misc: rename k8s-cronjob argo-cd app

--- a/infra/argocd-app/weather-forecast-k8s-job.yaml
+++ b/infra/argocd-app/weather-forecast-k8s-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cronjob
+  name: weather-forecast-k8s-cron-job
 spec:
   destination:
     name: ''
