--- a/charts/weather-cronjob/templates/cronjob.yaml
+++ b/charts/weather-cronjob/templates/cronjob.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.controlMode "kubernetes-job" }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -25,3 +26,4 @@ spec:
               configMap:
                 name: config
           restartPolicy: OnFailure
+{{- end}}
