feat: update weather-forecast-k8s-cron-job to use additional values file

--- a/infra/argocd-app/weather-forecast-k8s-job.yaml
+++ b/infra/argocd-app/weather-forecast-k8s-job.yaml
@@ -12,5 +12,9 @@ spec:
     repoURL: >-
       https://gitea.gc.home.arpa/black_sage/angi-data-platform-infrastructure-engineer
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values.yaml
+        - dev-angi-01-k8s-job.yaml
   sources: []
   project: default
