--- a/charts/weather-cronjob/templates/workflow.yaml
+++ b/charts/weather-cronjob/templates/workflow.yaml
@@ -19,6 +19,7 @@ spec:
       - name: download-weather-forecast
         container:
           image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          command: ["python3",  "main.py"]
           volumeMounts:
             - name: forecast-claim
               mountPath: {{ .Values.output.path }}
