--- a/infra/ansible/main.yml
+++ b/infra/ansible/main.yml
@@ -83,6 +83,30 @@
         group: root
         mode: 0755
 
+    - name: Helm install cilium CRD
+      kubernetes.core.helm:
+        release_name: cilium
+        release_namespace: kube-system
+        values_files:
+          - /root/angi-data-platform-infrastructure-engineer/charts/cilium/dev-angi-01.yaml
+        chart_ref: /root/angi-data-platform-infrastructure-engineer/charts/cilium/
+        dependency_update: true
+        wait: true
+        force: true
+      retries: 3
+      delay: 10
+
+    - name: Pause for 40 seconds for CRD to be installed
+      ansible.builtin.pause:
+        seconds: 40
+
+    - name: Helm uninstall cilium 
+      kubernetes.core.helm:
+        release_name: cilium
+        release_namespace: kube-system
+        state: absent
+        wait: true
+
     - name: Helm install cilium 
       kubernetes.core.helm:
         release_name: cilium
@@ -128,4 +152,3 @@
         state: present
         src: /root/angi-data-platform-infrastructure-engineer/infra/argocd-app/weather-forecast-k8s-job.yaml
         namespace: argocd
-
